--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,39 @@
+server:
+  port: 8087
+  servlet:
+    context-path: /stock
+
 spring:
   application:
     name: stock
   datasource:
-    url: jdbc:postgresql://104.154.190.156/stock?allowPublicKeyRetrieval=true&sslMode=DISABLED&useSSL=false&serverTimezone=UTC
-    username: macc
-    password: 1234qwer
+    driverClassName: org.postgresql.Driver
+    url: "jdbc:postgresql://localhost:5432/stock-db-postgresql?allowPublicKeyRetrieval=true&sslMode=DISABLED&useSSL=false&serverTimezone=UTC"
+    username: "postgres"
+    password: "Postgres2018!"
   jpa:
     show-sql: false
     hibernate:
       ddl-auto: update
+  flyway:
+    url: "jdbc:postgresql://localhost:5432/stock-db-postgresql?allowPublicKeyRetrieval=true&sslMode=DISABLED&useSSL=false&serverTimezone=UTC"
+    user: "postgres"
+    password: "Postgres2018!"
+    enabled: true
+
+security:
+  jwt:
+    token:
+      secret-key: secretKet
+      expire-length: 60000000000
+#spring:
+#  application:
+#    name: stock
+#  datasource:
+#    url: jdbc:postgresql://104.154.190.156/stock?allowPublicKeyRetrieval=true&sslMode=DISABLED&useSSL=false&serverTimezone=UTC
+#    username: macc
+#    password: 1234qwer
+#  jpa:
+#    show-sql: false
+#    hibernate:
+#      ddl-auto: update
